src/test/deca/context/valid/objet/get_01.deca
// Description:
//   getter
//
// Resultats:
//
//
// Historique:
//    cree le 01/01/2023

class A {
    protected int x;
    int getX() {
        return x;
    }
}

{
    A a = new A();
    a.getX();
}